--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ h4 {
           
           <h2>Financial</h2>
           <h3>Debt Free ==> Positive Net Worth ==> Being Rich</h3>
-               <h4 style="">Job security</h4>
+               <h4 style="color:red;">Job security</h4>
                <h4>Controlled/Reasonable spending</h4>
 
      
@@ -146,6 +146,9 @@ h4 {
      <div class="right">
           <h2>Productivity</h2>
           <h3 style="color:red;">Focused on priorities/Undistracted</h3>
+               <h4>Avoid distractions from unwanted / unimportant emails</h4>
+               <h4>Avoid distractions from ads on web/facebook</h4>
+               <h4>Avoid distractions from unimportant Youtube videos</h4>
           <h3>Persistent to completion</h3>
           <h3>Sense of urgency</h3>
      </div>
