--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@ h4 {
           <h2>Productivity</h2>
           <h3 style="color:red;">Focused on priorities/Undistracted</h3>
                <h4>Avoid distractions from unwanted / unimportant emails</h4>
+               <h4>Unsubscribe unimportant newsletters/promotion emails</h4>
                <h4>Avoid distractions from ads on web/facebook</h4>
                <h4>Avoid distractions from unimportant Youtube videos</h4>
           <h3>Persistent to completion</h3>
