--- a/index.html
+++ b/index.html
@@ -65,13 +65,23 @@ h2 {
      padding: 20px;
 }
 
-h3 {
+.l3 {
      color: steelblue;
      margin-left: 50px;
+     font-size: 20px;
 }
 
-h4 {
+.l4 {
      margin-left: 80px;
+     font-size: 18px;
+     padding: 5px;
+     font-weight: bold;
+}
+
+.l5 {
+     margin-left: 110px;
+     font-size: 18px;
+     padding: 5px;
 }
 
 @media only screen and (max-width:800px) {
@@ -119,46 +129,52 @@ h4 {
 
      <div class="main">
           
-          <h2>Financial</h2>
-          <h3>Debt Free ==> Positive Net Worth ==> Being Rich</h3>
-               <h4 style="color:red;">Job security</h4>
-               <h4>Controlled/Reasonable spending</h4>
+          <h2>Financial goals</h2>
+          <p class="l3">Debt Free ==> Positive Net Worth ==> Being Rich</p>
+               <p class="l4" style="color:red;background-color: lightgoldenrodyellow;padding:10px;">Job security</p>
+                    <p class="l5">Prioritize on taking actions</p>
+                    <p class="l5">Focus less on wild unnecessary reading / study</p>
+               <p class="l4">Controlled/Reasonable spending</p>
 
      
-          <h2>Physical</h2>
-               <h3>In shape</h3>
-                    <h4>Flat belly</h4>
-               <h3>Healthy skin</h3>
-               <h3>Healthy teeth</h3>
-               <h3>Healthy hair</h3>
-
-          <h2>Intellectual</h2>
-               <h3>Programming</h3>
-
-          <h2>Social</h2>
-               <h3>Sharing laughs with loved ones</h3>
-               <h3>Gifts to loved ones</h3>
-               <h3>Free contributions to communities / the world</h3>
+          <h2>Physical goals</h2>
+               <p class="l3">In shape</p>
+                    <p class="l4" style="color:red">Flat belly</p>
+               <p class="l3">Healthy skin</p>
+               <p class="l3">Healthy teeth</p3>
+               <p class="l3">Healthy hair</p3>
 
 
+
+          <h2>Social goals</h2>
+               <p class="l3" style="color:red">Sharing laughs with loved ones</p>
+               <p class="l3">Make loved ones happy</p>
+                    <p class="l4">Help them do stuff</p>
+                    <p class="l4">Make them laugh</p>
+                    <p class="l4">Buy them gifts</p>
+
+               <p class="l3">Free contributions to communities / the world</p>
+
+          <h2>Intellectual goals <br><span style="font-size: 18px;font-weight: lighter;">(might be distractions as well)</span></h2>
+               <p class="l3">Programming</p>
 
      </div>
 
      <div class="right">
-          <h2>Productivity</h2>
-          <h3 style="color:red;">Focused on priorities/Undistracted</h3>
-               <h4>Avoid distractions from unwanted / unimportant emails</h4>
-               <h4>Unsubscribe unimportant newsletters/promotion emails</h4>
-               <h4>Avoid distractions from ads on web/facebook</h4>
-               <h4>Avoid distractions from unimportant Youtube videos</h4>
-          <h3>Persistent to completion</h3>
-          <h3>Sense of urgency</h3>
+          <h2 style="color: brown">Maximize Productivity</h2>
+          <p class="l3" style="color:red;">Focused on priorities/Undistracted</p>
+          <p class="l5">Avoid distractions from unwanted / unimportant emails</p>
+               <p class="l5">Unsubscribe unimportant newsletters/promotion emails</p>
+                    <p class="l5">Avoid distractions from ads on web/facebook</p>
+                         <p class="l5">Avoid distractions from unimportant Youtube videos</p>
+          <p class="l3">Persistent to completion</p>
+          <p class="l3">Sense of urgency</p>
      </div>
 </div>
 
 
 <!-- Footer -->
-     <div style="background-color:#f1f1f1;text-align:center;padding:10px;margin-top:7px;font-size:16px;">by Hung Nguyen<br>
+     <div style="background-color:#f1f1f1;text-align:center;padding:10px;margin-top:7px;font-size:16px;">I don't know what to put as a footer here :P<br>
           </div>
 
 </body>
