--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h2 {
           <div class="menuitem"><a href="financial.html">Financial</a></div>
           <div class="menuitem"><a href="social.html">Social</a></div>
           <div class="menuitem"><a href="intellectual.html">Intellectual</a></div>
-          <div class="menuitem"><a href="https://todoist.com/app/#start">Action lists</a></div>
+          <div class="menuitem"><a href="https://todoist.com">Action lists</a></div>
           
      </div>
 
