--- a/index.html
+++ b/index.html
@@ -26,28 +26,25 @@
 <div class="jumbotron text-center" style="background-color: steelblue;color:whitesmoke">
   <h1>The HAPPY Project</h1>
   <p>Living a happy and purposeful life!</p> 
-  <a href="goals.html">Goals</a>
 </div>
   
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="background-color: whitesmoke;">
-    <a class="navbar-brand" href="index.html">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="goals.html">Goals</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="actions.html">Actions</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="resume.html">Resume</a>
-            </li>    
-        </ul>
-    </div>  
-</nav>
+<nav class="navbar navbar-default" >
+    <div class="container-fluid" >
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html">Happy</a>
+      </div>
+      <ul class="nav navbar-nav" ">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="goal2.html">Goals</a></li>
+        <li><a href="actions.html">Actions</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="time-management.html">Time management</a></li>
+        <li><a href="debt-management.html">Debt management</a></li>
+        <li><a href="relationship-management.html">Relationship management</a></li>
+
+      </ul>
+    </div>
+  </nav>
 
 <div class="container">
     <div class="row">
@@ -77,7 +74,9 @@
 
             <h3>Social goals</h3>
             <p>Sharing laughs with loved ones</p>
-            <p>Make people happy</p>
+            <p>Make people happy
+                <code><a href="to-do-list.html">To-do list</a></code>
+            </p>
 
         </div>
         <div class="col-sm-6">
