--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         a {
             background-color: whitesmoke;
         }
+
+
     </style>
 </head>
 <body>
@@ -41,21 +43,34 @@
         <li><a href="time-management.html">Time management</a></li>
         <li><a href="debt-management.html">Debt management</a></li>
         <li><a href="relationship-management.html">Relationship management</a></li>
+        <li><a href="general-to-do-list.html">General to-do list</a></li>
+        <li><a href="favorite-karaoke-songs.html">Favorite karaoke songs</a></li>
+        <li><a href="favorite-work-out-songs.html">Favorite work-out songs</a></li>
+        <li><a href="role-models.html">Role models</a></li>
+
+
+
 
       </ul>
     </div>
   </nav>
 
+
+
 <div class="container">
+    
+    <div class="row">
+
+        <img src="capitol-building2.jpg" style="max-width: 100%;">
+    </div>
+
     <div class="row">
         <div class="col-sm-6">
             <h3 >Financial Goals</h3>
             <p style="color:red" >Strengthen job security</p>
             <p>Debt-free, then positive net-worth, then become rich</p>
-
-
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" id="Physical">
 
 
             <h3>Physical Goals</h3>
