--- a/ttd-make-people-happy.html
+++ b/ttd-make-people-happy.html
@@ -144,7 +144,7 @@
           <li>Pretend people love you</li>
           <li>Call/text to check out how they're doing</li>
           <li>Make them laugh</li>
-          <li>Offer help (without affecting time for your priorities)</li>
+          <li>Offer help (without affecting your priorities)</li>
           <li>Give a sincere compliment</li>
           <li>Invite them for road trips</li>
           <li>Invite them for dinner</li>
