--- a/index.html
+++ b/index.html
@@ -37,16 +37,15 @@
         </div> -->
         
         <ul class="nav navbar-nav" ">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="goal2.html">Goals</a></li>
+            <li class="active"><a href="index.html">Goals</a></li>
+            <li><a href="productivity.html">Productivity</a></li>
             <li><a href="general-to-do-list.html">General to-do list</a></li>
-            <li><a href="actions.html">Actions</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="time-management.html">Time management</a></li>
             <li><a href="debt-management.html">Debt management</a></li>
             <li><a href="investment.html">Investment management</a></li>
-            <li><a href="loved-ones.html">Loved ones</a></li>
-            <li><a href="business-relationships.html">Business relationships</a></li>
+            <li><a href="loved-ones.html">Caring for loved ones</a></li>
+            <li><a href="business-relationships.html">Fruitful business relationships</a></li>
             <li><a href="favorite-karaoke-songs.html">Favorite karaoke songs</a></li>
             <li><a href="favorite-work-out-songs.html">Favorite work-out songs</a></li>
             <li><a href="role-models.html">Role models</a></li>
